[package]
name = "routex"
version = "0.1.3"
edition = "2021"

license = "MIT"
authors = ["dawson a957360688@gmail.com"]
repository = "https://github.com/Dawson-Jones/routex"
description = "cross platform route implement"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-route = { version = "0.19" }
netlink-sys = "*"